--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
       <header class="main-header">
-        <a class="main-header-logo" href="index.html"><h1 class="main-logo">Device</h1></a>
+        <a class="main-header-logo" href="index.html">Device</a>
         <ul class="header-ui">
         <li><span class="search-box">
                 <!-- Здесь будет форма -->
@@ -37,6 +37,7 @@
       </header>
       
       <main class="content">
+        <h1 class="visually-hidden">Device - интернет магазин гаджетов</h1>
         <h2 class="page-title">Моноподы для селфи</h2>
         <ul class="breadcrumbs">
           <li><a href="index.html">Главная</a></li>
