--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
       <header class="main-header">
-        <h1 class="main-logo">Device</h1>
+        <a class="main-header-logo" href="index.html">Device</a>
         <ul class="header-ui">
         <li><span class="search-box">
           <!-- Здесь будет форма --></span></li>
@@ -34,6 +34,7 @@
       </header>
       
       <main class="content">
+        <h1 class="visually-hidden">Device - интернет магазин гаджетов</h1>
         <div class="slides">
             <span class="slider"></span>
             <div class="slide-1">
