Подготовка графики проекта
Подготовка графики и подключение контентных изображений.

--- a/catalog.html
+++ b/catalog.html
@@ -61,7 +61,7 @@
               <h3><a href="#">Любительская селфи-палка</a></h3>
               <p>
                   <a href="#">
-                    <img src="#" width="#" height"#" alt="Любительская селфи-палка">
+                    <img src="img/product-1.jpg" width="360px" height="380px" alt="Любительская селфи-палка">
                   </a>
               </p>
               <b>500 руб.</b>
@@ -76,7 +76,7 @@
               </h3>
               <p>
                   <a href="#">
-                  <img src="#" width="#" height"#" alt="Любительская селфи-палка">
+                  <img src="img/product-2.jpg" width="360px" height="380px" alt="Любительская селфи-палка">
                   </a>
               </p>
               <b>1 500 руб.</b>
@@ -89,7 +89,7 @@
               <h3><a href="#">Непотопляемая селфи-палка</a></h3>
               <p>
                   <a href="#">
-                  <img src="#" width="#" height"#" alt="Любительская селфи-палка">
+                  <img src="img/product-3.jpg" width="360px" height="380px" alt="Любительская селфи-палка">
                   </a>
               </p>
               <b>2 500 руб.</b>
@@ -102,7 +102,7 @@
               <h3><a href="#">Селфи-палка «Следуй за мной»</a></h3>
               <p>
                   <a href="#">
-                  <img src="#" width="#" height"#" alt="Любительская селфи-палка">
+                  <img src="img/product-4.jpg" width="360px" height="380px" alt="Любительская селфи-палка">
                   </a>
               </p>
               <b>4 900 руб.</b>
