--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="slides">
             <span class="slider"></span>
             <div class="slide-1">
-                <img src="#" width="#" height="#">
+                <img src="img/monopod-slide.png" width="384px" height="486px" alt="Палка для селфи">
                 <span>1</span>
                 <h2>Делай селфи,<br>
                 как Бен Стиллер!</h2>
@@ -60,7 +60,7 @@
                 </table>
             </div>
             <div class="slide-2">
-                <img src="#" width="#" height="#">
+                <img src="img/tracker-slide.png" width="345" height="485" alt="Фитнес - браслет">
                 <span>2</span>
                 <h2>Худеем<br>
                 правильно!</h2>
@@ -78,7 +78,7 @@
                 </table>
             </div>
             <div class="slide-3">
-                <img src="#" width="#" height="#">
+                <img src="img/copter-slide.png" width="526px" height="334px" alt="Квадрокоптер">
                 <span>3</span>
                 <h2>Порхает как бабочка<br>
                     жалит как пчела!</h2>
@@ -138,10 +138,10 @@
         </section>
           
         <div class="logotypes">
-          <img src="#">
-          <img src="#">
-          <img src="#">
-          <img src="#">
+          <img src="img/dji-logo.jpg" width="260px" height="100px" alt="DJI">
+          <img src="img/spgadgets-logo.jpg" width="260px" height="100px" alt="SP Gadgets">
+          <img src="img/gopro-logo.jpg" width="260px" height="100px" alt="GoPro">
+          <img src="img/vive-logo.jpg" width="260px" height="100px" alt="Vive">
         </div>
           
         <article class="info">
@@ -162,7 +162,7 @@
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить<br>
              работоспособность покупки. Всякое бывает.</p>
-          <a href="#"><img src="#" width="#" height="#"></a>
+          <a href="#"><img src="img/map.jpg" width="560px" height="222px" alt="Контакты улица Строителей, 15"></a>
           <a class="yellow-button" href="#">Напишите нам</a>
         </section>
       </main>
