Базовая стилизация проекта

--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Девайс</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
       <header class="main-header">
-        <a class="main-header-logo" href="index.html">Device</a>
+        <a class="main-header-logo" href="index.html">DEVICE</a>
         <ul class="header-ui">
         <li>
             <form class="searchbox-form" action="https://echo.htmlacademy.ru" method="post">
                 <input type="search" class="searchbox-main" placeholder="Поиск по сайту" name="searchbox-main">
-                <button type="submit" class="button-search"><img src="#" alt="Поиск"></button>
+                <button type="submit" class="button-search">Найти</button>
                 
             </form></li>
         <li><a class="main-login" href="#">Войти</a></li>
@@ -51,12 +54,12 @@
                 </p>
                 <a class="yellow-button" href="#">Подробнее</a>
                 <table class="spec-slide-1">
-                <tr>
+                <tr class="spec-value">
                     <td>8,5 м</td>
                     <td>5 кг</td>
                     <td>Карбон</td>
                 </tr>
-                <tr>
+                <tr class="spec">
                     <td>Длина палки</td>
                     <td>Вес палки</td>
                     <td>Материал</td>
@@ -73,10 +76,10 @@
                 </p>
                 <a class="yellow-button" href="#">Подробнее</a>
                 <table class="spec-slide-2">
-                <tr>
+                <tr class="spec-value">
                     <td>48 часов</td>
                 </tr>
-                <tr>
+                <tr class="spec">
                     <td>Без подзарядки</td>
                 </tr>
                 </table>
@@ -91,11 +94,11 @@
                 </p>
                 <a class="yellow-button" href="#">Подробнее</a>
                 <table class="spec-slide-3">
-                <tr>
+                <tr class="spec-value">
                     <td>800 м</td>
                     <td>50 м</td>
                 </tr>
-                <tr>
+                <tr class="spec">
                     <td>Дальность полета</td>
                     <td>Радиус поражения</td>
                 </tr>
@@ -175,7 +178,7 @@
       </main>
       
       <footer class="main-footer">
-        <h2 class="logo">Device</h2>
+        <a href="#"><h2 class="logo">DEVICE</h2></a>
         <ul class="footer-ui">
             <li><a class="footer-login" href="#">Войти</a></li>
             <li><a class="footer-compare" href="#">Сравнить</a></li>
