--- a/catalog.html
+++ b/catalog.html
@@ -154,7 +154,7 @@
           <section class="filter-result">
             <h2 class="visually-hidden">Результаты подобрки товаров каталога</h2>
             <ul class="result-show pos-flex">
-              <li>
+              <li class="item-card">
                 <div class="result-show-img">
                   <img src="img/product-1.jpg" alt="Любительская селфи-палка">
                   <div class="result-show-buy visually-hidden">
@@ -167,7 +167,7 @@
                   <span>500 руб.</span>
                 </div>
               </li>
-              <li>
+              <li class="item-card">
                 <div class="result-show-img">
                   <img src="img/product-2.jpg" alt="Профессиональная селфи-палка">
                   <div class="result-show-buy visually-hidden">
@@ -180,7 +180,7 @@
                   <span>1 500 руб.</span>
                 </div>
               </li>
-              <li>
+              <li class="item-card">
                 <div class="result-show-img">
                   <img src="img/product-3.jpg" alt="Непотопляемая селфи-палка">
                   <div class="result-show-buy visually-hidden">
@@ -193,7 +193,7 @@
                   <span>2 500 руб.</span>
                 </div>
               </li>
-              <li>
+              <li class="item-card">
                 <div class="result-show-img">
                   <img src="img/product-4.jpg" alt="Селфи-палка 'Следуй за мной'">
                   <div class="result-show-buy visually-hidden">
