--- a/catalog.html
+++ b/catalog.html
@@ -212,9 +212,9 @@
                 <li class="pagination-item pagination-prev"><a>Назад</a></li>
                 <li class="pagination-item">
                   <ul class="pagination-numbers">
-                    <li class="pagination-current"><a>1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
+                    <li class="pagination-current" class="page-number"><a>1</a></li>
+                    <li><a href="#" class="page-nubmer">2</a></li>
+                    <li><a href="#" class="page-number">3</a></li>
                   </ul>
                 </li>
                 <li class="pagination-item pagination-next"><a href="#">Вперед</a></li>
